--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,8 @@
+# Gemini Configuration
+GOOGLE_API_KEY=abcdefgh1jklmnopqrstuvwxyz
+GEMINI_MODEL=gemini-2.0-flash-001
+
+
 # OpenAI Configuration (if using OpenAI)
 OPENAI_API_KEY=your-openai-api-key-here
 OPENAI_MODEL=gpt-4-turbo-preview
