--- a/requirements.txt
+++ b/requirements.txt
@@ -31,15 +31,15 @@ marshmallow==3.26.1
 multidict==6.2.0
 mypy-extensions==1.0.0
 numpy==1.24.3
-openai==1.66.3
+openai>=1.0.0
 orjson==3.10.15
 packaging==23.2
 pillow==11.1.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
-PyPDF2==3.0.1
-python-dotenv==1.0.1
+PyPDF2>=3.0.1
+python-dotenv>=1.0.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -47,13 +47,14 @@ requests-toolbelt==1.0.0
 sniffio==1.3.1
 SQLAlchemy==2.0.39
 tenacity==8.5.0
-tiktoken==0.9.0
+tiktoken>=0.5.2
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 yarl==1.18.3
-pdfkit==1.0.0
-Markdown==3.4.3
-python-markdown-math==0.8
-Jinja2==3.0.3 
+pdfkit>=1.0.0
+Markdown>=3.4.3
+python-markdown-math>=0.8
+Jinja2>=3.0.3
+google-genai
