Nice looking app. needs images handling and pdf processing

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,8 @@ pillow==11.1.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
-PyPDF2>=3.0.1
-python-dotenv>=1.0.0
+PyPDF2==3.0.1
+python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -58,3 +58,6 @@ Markdown>=3.4.3
 python-markdown-math>=0.8
 Jinja2>=3.0.3
 google-genai
+fastapi==0.109.2
+uvicorn==0.27.1
+python-multipart==0.0.9
