--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
+aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==4.0.3
