--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,31 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
-aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==4.0.3
 attrs==25.3.0
+cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.2.1
 dataclasses-json==0.6.7
 defusedxml==0.7.1
 distro==1.9.0
 exceptiongroup==1.2.2
+fastapi==0.109.2
 fonttools==4.56.0
 fpdf2==2.8.2
 frozenlist==1.5.0
+google-auth==2.40.3
+google-genai==1.24.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+Jinja2==3.1.6
 jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -28,37 +34,43 @@ langchain-community==0.0.38
 langchain-core==0.1.53
 langchain-openai==0.0.8
 langsmith==0.1.147
+Markdown==3.8.2
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.2.0
 mypy-extensions==1.0.0
 numpy==1.24.3
-openai>=1.0.0
+openai==1.93.0
 orjson==3.10.15
 packaging==23.2
+pdfkit==1.0.0
 pillow==11.1.0
 propcache==0.3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyMuPDF==1.24.1
+PyMuPDFb==1.24.1
 PyPDF2==3.0.1
 python-dotenv==1.0.1
+python-markdown-math==0.9
+python-multipart==0.0.9
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9.1
 sniffio==1.3.1
 SQLAlchemy==2.0.39
+starlette==0.36.3
 tenacity==8.5.0
-tiktoken>=0.5.2
+tiktoken==0.9.0
 tqdm==4.67.1
 typing-inspect==0.9.0
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 urllib3==2.3.0
-yarl==1.18.3
-pdfkit>=1.0.0
-Markdown>=3.4.3
-python-markdown-math>=0.8
-Jinja2>=3.0.3
-google-genai
-fastapi==0.109.2
 uvicorn==0.27.1
-python-multipart==0.0.9
+websockets==15.0.1
+yarl==1.18.3
